add_xacc_test(RigettiAccelerator)
if(${XACC_HAS_ANTLR})
    include_directories(${CMAKE_SOURCE_DIR}/compiler)
    add_xacc_test(QuilCompiler)
    target_link_libraries(QuilCompilerTester xacc-rigetti-quilcompiler)
endif()
add_xacc_test(QuilVisitor)
add_xacc_test(QCS)
target_link_libraries(QCSTester xacc-rigetti-accelerator /usr/lib64/libpython3.6m.so)
